Fix spacing for h2 titles

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -38,6 +38,7 @@ $light_grey: #ada997;
   border-bottom: 2px solid $light_green;
   color: $purple;
   text-transform: capitalize;
+  letter-spacing: -2px;
 }
 
 body {
